--- a/content_styles.css
+++ b/content_styles.css
@@ -1,3 +1,3 @@
-#delugesiphon-popup-notify { border-radius:5px; opacity:0.65; border:1px solid black; position:fixed; top:5px; right:5px; z-index:1010101; height:24px; width:180px; background:#222; padding:3px; color:#FFFFF2; }
-#delugesiphon-icon { float:left; height:24px; width:24px; background:transparent 1px 2px no-repeat; /* icon is 21 x 19 */ }
-#delugesiphon-message {	float:left;	height:24px; width:156px; line-height:24px; vertical-align:middle; }
+#delugesiphon-popup-notify { border-radius:5px; opacity:0.65; border:1px solid black; position:fixed; top:5px; right:5px; z-index:1010101; height:24px; width:180px; background:#222; padding:3px; margin:0px; color:#FFFFF2; }
+#delugesiphon-icon { margin:0; padding:0; float:left; height:24px; width:24px; background:transparent 1px 2px no-repeat; /* icon is 21 x 19 */ }
+#delugesiphon-message {	margin:0; padding:0; font-size:12px; float:left;	height:24px; width:156px; line-height:24px; vertical-align:middle; }
