--- a/options.css
+++ b/options.css
@@ -4,8 +4,13 @@ html,body { background: #FFF; }
 .content h3 { margin-left: 10px; }
 .sidebar-content { margin: 2px 4px 2px 10px; }
 .validation-message { margin: 0 6px; }
-.navigation h1 { 
+.navigation h3 { 
 	background:url(icon-19.png) transparent 0 0 no-repeat; 
 	-webkit-margin-start: 13px;
 	padding-left: 26px;
+}
+.mainview header h2.alt {
+	position: absolute;
+	top: 0;
+	right: 0;
 }
