--- a/options.css
+++ b/options.css
@@ -5,7 +5,7 @@ html,body { background: #FFF; }
 .sidebar-content { margin: 2px 4px 2px 10px; }
 .validation-message { margin: 0 6px; }
 .navigation h3 { 
-	background:url(icon-19.png) transparent 0 0 no-repeat; 
+	background:url(images/icon-19.png) transparent 0 0 no-repeat; 
 	-webkit-margin-start: 13px;
 	padding-left: 26px;
 }
