--- a/lib/jquery.modal.css
+++ b/lib/jquery.modal.css
@@ -3,7 +3,7 @@
   top: 0; right: 0; bottom: 0; left: 0;
   width: 100%; height: 100%;
   overflow: auto;
-  z-index: 1;
+  z-index: 9999999998;
   padding: 20px;
   box-sizing: border-box;
   background-color: rgb(0,0,0);
@@ -24,7 +24,7 @@
   display: inline-block;
   vertical-align: middle;
   position: relative;
-  z-index: 2;
+  z-index: 9999999999;
   max-width: 500px;
   box-sizing: border-box;
   width: 90%;
