--- a/content_handler.css
+++ b/content_handler.css
@@ -75,13 +75,16 @@
 
 #delugesiphon-modal-__MSG_@@extension_id__ input,
 #delugesiphon-modal-__MSG_@@extension_id__ button,
-#delugesiphon-modal-__MSG_@@extension_id__ select,
-#delugesiphon-modal-__MSG_@@extension_id__ input[type="text"],
-#delugesiphon-modal-__MSG_@@extension_id__ input[type="checkbox"],
-#delugesiphon-modal-__MSG_@@extension_id__ input[type="submit"] {
+#delugesiphon-modal-__MSG_@@extension_id__ select {
   display: inline-block;
   border: 1px solid #CCC;
   font-size: 0.8em;
+}
+
+#delugesiphon-modal-__MSG_@@extension_id__ input[disabled] {
+  background: #ddd;
+  color: 444;
+  opacity: 0.8;
 }
 
 #delugesiphon-modal-__MSG_@@extension_id__ input[type="text"] {
