--- a/content_handler.css
+++ b/content_handler.css
@@ -5,6 +5,7 @@
   position: relative;
   font-size: 16px;
   padding: 0;
+  min-height: 250px;
 }
 
 #delugesiphon-modal-__MSG_@@extension_id__ form {
@@ -99,11 +100,22 @@
 
 #delugesiphon-modal-__MSG_@@extension_id__ .buttons {
   text-align: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
 }
 
-#delugesiphon-modal-__MSG_@@extension_id__ input[type="submit"],
-#delugesiphon-modal-__MSG_@@extension_id__ button {
+#delugesiphon-modal-__MSG_@@extension_id__ .buttons input,
+#delugesiphon-modal-__MSG_@@extension_id__ .buttons button {
   min-width: 60px;
   display: inline-block;
   margin: 0 auto;
+
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+  cursor: pointer;
 }
