--- a/content_handler.css
+++ b/content_handler.css
@@ -85,6 +85,9 @@
   display: inline-block;
   border: 1px solid #CCC;
   font-size: 0.8em;
+  line-height: 14px;
+  border-radius: 2px;
+  height: auto;
 }
 
 #delugesiphon-modal-__MSG_@@extension_id__ input[disabled] {
